# fast_support_reduction

./: .gitignore  .gitmodules  2d_bbw.cpp  CMakeLists.txt  README.md  bbw.cpp  gl.cpp  main.cpp  makefile  mesh_file_generator.cpp  practice.cpp  shape_opt.cpp  shape_opt_auto_diff.cpp  stress_visualizer.cpp  support_reduction.cpp  visualize.cpp
abstract/: README.md  abstract.tex  acmart.cls  body.tex  makefile  references.bib
cmake/: FindGauss.cmake  FindLIBIGL.cmake
data/: bb-bunny.dmat  bb-bunny.mesh  bb-bunny.tgf  bb-bunny_farsee.mesh  bb-bunny_handsup.mesh  big-buck-bunny.mesh  bunny.dmat  bunny.mesh  bunny.tgf  cantilever.dmat  cantilever.tgf  cantilever_M.dmat  cantilever_S.dmat  dinosaur.dmat  dinosaur.mesh  dinosaur.tgf  hand.dmat  thin.dmat  thin.tgf  woody-bony.dmat  woody-bony.tgf  woody-cross-sparse.dmat  woody-cross-sparse.tgf  woody-cross.dmat  woody-double.dmat  woody-double.tgf  woody-single.dmat  woody-single.tgf  woody-triple.dmat  woody-triple.tgf  woody.bf  woody.dmat  woody.tgf  woody_handonly.bf  woody_handonly.tgf
matlab/: remesh_at_handles.m  saveMesh.m
matlab/shape_optimization/: example1.m
papers/: README.md
papers/deformation/: README.md
papers/interactive_design/: README.md
papers/notes/: notes.tex
papers/shape_optimization/: README.md
papers/stress/: README.md
src/: arap_energy.cpp  arap_energy.h  arap_energy_clustering.cpp  arap_energy_clustering.h  box.h  camera.h  compute_bbw.cpp  compute_bbw.h  compute_jacobian.cpp  compute_jacobian.h  create_shader_program_from_files.h  defs.h  forward_kinematics.cpp  forward_kinematics.h  init_render_to_texture.cpp  init_render_to_texture.h  last_modification_time.h  lbs_matrix.cpp  lbs_matrix.h  mesh_to_vao.h  minitrace.h  overhang_energy.cpp  overhang_energy.h  persp.h  primitives.h  print_program_info_log.h  reduce_support.cpp  reduce_support.h  self_intersection.cpp  self_intersection.h  shader.cpp  shader.h  support_polygon.h  time_utils.h  wrap_igl.h
src/opengl/: Box.h  Line.h  Quad.h  Shader.cpp  Shader.h  create_shader_program_from_files.h  depthbuffer_to_png.cpp  depthbuffer_to_png.h  find_and_replace_all.h  intersection_volume.cpp  intersection_volume.h  normalized_device_coordinate.h  primitives.h  print_opengl_info.h  print_shader_info_log.h  vertex_array_with_texture.h
src/shaders/: intersection.fs  intersection.vs  peel.fs  peel.vs  screen.fs  screen.vs  simple.fs  simple.vs  viz.fs  viz.vs
src/stress/: element.cpp  element.h
src/utils/: minitrace.h  time_utils.cpp
src/weights/: clean.h  robust_bbw.cpp  robust_bbw.h
